<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="pick_photo">照片</string>
    <string name="pick_picture">从相册选择</string>
    <string name="take_picture">拍照</string>
    <string name="no_photo_list">没有任何照片</string>
    <string name="send">发送</string>
    <string name="max_num">最多一次可上传9张图片</string>

    <string name="pick_ring">铃声</string>


    <string name="song_folder_name">文件名</string>
    <string name="song_num">歌曲数量</string>
    <string name="song_path">歌曲路径</string>
    <string name="artist">歌手</string>
    <string name="song_name">歌曲名称</string>
    <string name="song_no">歌曲序号</string>


</resources>
