<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/dimen_10px"
    android:paddingBottom="@dimen/dimen_10px"
    android:paddingLeft="@dimen/dimen_20px"
    android:paddingRight="@dimen/dimen_20px"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_10px"
        android:layout_marginRight="@dimen/dimen_10px"
        android:layout_height="@dimen/dimen_88px"
        android:layout_toRightOf="@+id/iv_image"
        android:layout_toEndOf="@+id/iv_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dimen_4px"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_song_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_28_2c"
                android:text="@string/song_no" />

            <TextView
                android:id="@+id/tv_song_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10px"
                style="@style/text_28_2c"
                android:text="@string/song_name" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_artist"
            android:layout_marginTop="@dimen/dimen_4px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_28_2c"
            android:text="@string/artist" />

    </LinearLayout>

</RelativeLayout>
