<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/dimen_10px"
    android:paddingBottom="@dimen/dimen_10px"
    android:paddingLeft="@dimen/dimen_20px"
    android:paddingRight="@dimen/dimen_20px"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/iv_image"
        android:layout_marginLeft="@dimen/dimen_10px"
        android:layout_marginRight="@dimen/dimen_10px"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_10px"
        android:layout_marginRight="@dimen/dimen_10px"
        android:layout_height="@dimen/dimen_88px"
        android:layout_toRightOf="@+id/iv_image"
        android:layout_toEndOf="@+id/iv_image">

        <TextView
            android:id="@+id/tv_song_folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_2px"
            style="@style/text_28_2c"
            android:text="@string/song_folder_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_2px"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_song_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/text_28_2c"
                android:text="@string/song_num" />

            <TextView
                android:id="@+id/tv_line"
                android:layout_width="1px"
                android:layout_toRightOf="@+id/tv_song_num"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10px"
                android:layout_marginLeft="@dimen/dimen_10px"
                android:background="@color/color_2c"
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@+id/tv_song_num" />

            <TextView
                android:id="@+id/tv_song_path"
                android:layout_width="match_parent"
                android:text="@string/song_path"
                android:ellipsize="end"
                android:singleLine="true"
                style="@style/text_28_2c"
                android:layout_toRightOf="@+id/tv_line"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
